--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -10,6 +10,6 @@
 				</tr>
 			<% end %>
 		</table>
-		<%= link_to 'New Report', new_report_path %>
+		<%= link_to 'New Report', new_user_report_path(current_user) %>
 	</div>
 </div>
