--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @report, html: { multipart: true } do |f| %>
+<%= form_for ([@user, @report]), html: { multipart: true } do |f| %>
   <% if @report.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@report.errors.count, "error") %> prohibited this catalog from being saved:</h2>
